// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`token validateSerialNumberParam tests Verify validateSerialNumberParam for invalid  1`] = `
Array [
  "Invalid parameter: serialnumber",
]
`;

exports[`token validateSerialNumberParam tests Verify validateSerialNumberParam for invalid -1 1`] = `
Array [
  "Invalid parameter: serialnumber",
]
`;

exports[`token validateSerialNumberParam tests Verify validateSerialNumberParam for invalid 0 1`] = `
Array [
  "Invalid parameter: serialnumber",
]
`;

exports[`token validateSerialNumberParam tests Verify validateSerialNumberParam for invalid 0 2`] = `
Array [
  "Invalid parameter: serialnumber",
]
`;

exports[`token validateSerialNumberParam tests Verify validateSerialNumberParam for invalid end 1`] = `
Array [
  "Invalid parameter: serialnumber",
]
`;

exports[`token validateSerialNumberParam tests Verify validateSerialNumberParam for invalid null 1`] = `
Array [
  "Invalid parameter: serialnumber",
]
`;

exports[`token validateSerialNumberParam tests Verify validateSerialNumberParam for invalid undefined 1`] = `
Array [
  "Invalid parameter: serialnumber",
]
`;

exports[`token validateTokenIdParam tests Verify validateTokenIdParam for invalid  1`] = `
Array [
  "Invalid parameter: tokenid",
]
`;

exports[`token validateTokenIdParam tests Verify validateTokenIdParam for invalid -1 1`] = `
Array [
  "Invalid parameter: tokenid",
]
`;

exports[`token validateTokenIdParam tests Verify validateTokenIdParam for invalid end 1`] = `
Array [
  "Invalid parameter: tokenid",
]
`;

exports[`token validateTokenIdParam tests Verify validateTokenIdParam for invalid null 1`] = `
Array [
  "Invalid parameter: tokenid",
]
`;

exports[`token validateTokenIdParam tests Verify validateTokenIdParam for invalid undefined 1`] = `
Array [
  "Invalid parameter: tokenid",
]
`;

exports[`utils buildAndValidateFilters serialnumbers tests Verify buildAndValidateFilters for invalid {"serialnumber":"-1"} 1`] = `
Array [
  "Invalid parameter: serialnumber",
]
`;

exports[`utils buildAndValidateFilters serialnumbers tests Verify buildAndValidateFilters for invalid {"serialnumber":"0"} 1`] = `
Array [
  "Invalid parameter: serialnumber",
]
`;

exports[`utils buildAndValidateFilters serialnumbers tests Verify buildAndValidateFilters for invalid {"serialnumber":"deb"} 1`] = `
Array [
  "Invalid parameter: serialnumber",
]
`;

exports[`utils buildAndValidateFilters token info query timestamp filter tests Verify buildAndValidateFilters for invalid {"serialnumber":"123456"} 1`] = `
Array [
  "Invalid parameter: serialnumber",
]
`;

exports[`utils buildAndValidateFilters token info query timestamp filter tests Verify buildAndValidateFilters for invalid {"timestamp":""} 1`] = `
Array [
  "Invalid parameter: timestamp",
]
`;

exports[`utils buildAndValidateFilters token info query timestamp filter tests Verify buildAndValidateFilters for invalid {"timestamp":"abc"} 1`] = `
Array [
  "Invalid parameter: timestamp",
]
`;

exports[`utils buildAndValidateFilters token info query timestamp filter tests Verify buildAndValidateFilters for invalid {"timestamp":"gt:1234"} 1`] = `
Array [
  "Invalid parameter: timestamp",
]
`;

exports[`utils buildAndValidateFilters token info query timestamp filter tests Verify buildAndValidateFilters for invalid {"timestamp":"gte:1234"} 1`] = `
Array [
  "Invalid parameter: timestamp",
]
`;

exports[`utils buildAndValidateFilters token info query timestamp filter tests Verify buildAndValidateFilters for invalid {"timestamp":"ne:1234"} 1`] = `
Array [
  "Invalid parameter: timestamp",
]
`;

exports[`utils buildAndValidateFilters token type tests Verify buildAndValidateFilters for invalid {"type":"-1"} 1`] = `
Array [
  "Invalid parameter: type",
]
`;

exports[`utils buildAndValidateFilters token type tests Verify buildAndValidateFilters for invalid {"type":"cred"} 1`] = `
Array [
  "Invalid parameter: type",
]
`;

exports[`utils buildAndValidateFilters token type tests Verify buildAndValidateFilters for invalid {"type":"deb"} 1`] = `
Array [
  "Invalid parameter: type",
]
`;

exports[`utils validateAndParseFilters account.id tests Verify buildAndValidateFilters for invalid {"account.id":"@.#.$"} 1`] = `
Array [
  "Invalid parameter: account.id",
]
`;

exports[`utils validateAndParseFilters account.id tests Verify buildAndValidateFilters for invalid {"account.id":"-1"} 1`] = `
Array [
  "Invalid parameter: account.id",
]
`;

exports[`utils validateAndParseFilters account.id tests Verify buildAndValidateFilters for invalid {"account.id":"-1.-1.-1"} 1`] = `
Array [
  "Invalid parameter: account.id",
]
`;

exports[`utils validateAndParseFilters account.id tests Verify buildAndValidateFilters for invalid {"account.id":"0.1.2.3"} 1`] = `
Array [
  "Invalid parameter: account.id",
]
`;

exports[`utils validateAndParseFilters account.id tests Verify buildAndValidateFilters for invalid {"account.id":"L"} 1`] = `
Array [
  "Invalid parameter: account.id",
]
`;
